fix: header visibility

--- a/custom-implementation/src/main.css
+++ b/custom-implementation/src/main.css
@@ -1,13 +1,13 @@
+#fern-footer, #fern-header {
+  display: none;
+}
+
 #fern-header-content-wrapper {
   display: block; /* Make the elements visible by default */
   
   @media (min-width: 1024px) {
     display: none; /* Hide the elements on screens larger than 1024px */
   }
-}
-
-#fern-footer {
-  display: none;
 }
 
 #devrev-header-content-wrapper {
